# onerng

./: COPYING  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  onerng.spec
debian/: .changelog.swp  README.source  changelog  control  copyright  files
debian/onerng/DEBIAN/: conffiles  control  md5sums  postinst
debian/onerng/etc/: onerng.conf
debian/onerng/sbin/: onerng.sh
files/: Makefile  Makefile.am  Makefile.in
